plugins {
    id 'java'
    id 'application'
}

group = 'prop43.1'
version = '0.0'

ext {
    javaMainClass = 'ctrldomini.Main'
}

application {
    mainClassName = javaMainClass
}

jar {
    manifest {
        attributes 'Main-Class': javaMainClass
    }
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

run {
    standardInput = System.in
}


repositories {
    mavenCentral()
}

dependencies {
    // this is just an example of importing an external library, you do not need to use it in your project
    implementation 'com.google.code.gson:gson:2.8.9'
    testImplementation('junit:junit:4.13.1')
}
